naar wpf gegaan

--- a/finah-desktop/finah-desktop/App.config
+++ b/finah-desktop/finah-desktop/App.config
@@ -1,6 +1,42 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
+  </startup>
+  <connectionStrings>
+
+
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=tcp:of4tna6c1a.database.windows.net,1433;Database=finah;User ID=finah@of4tna6c1a;Password=Potlood123;Trusted_Connection=False;Encrypt=True;Connection Timeout=30;"/></connectionStrings>
+  <system.web>
+    <membership>
+      <providers>
+        <remove name="AspNetSqlMembershipProvider"/>
+        <add name="AspNetSqlMembershipProvider"
+             type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"
+             connectionStringName="LocalSqlServer"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             applicationName="/"
+             requiresUniqueEmail="false"
+             passwordFormat="Hashed"
+             maxInvalidPasswordAttempts="3"
+             minRequiredPasswordLength="4"
+             minRequiredNonalphanumericCharacters="1"
+             passwordAttemptWindow="10"
+             passwordStrengthRegularExpression="" />
+      </providers>
+    </membership>
+    <roleManager enabled="true">
+      <providers>
+        <add name="MyRoleProvider"
+             connectionStringName="LocalSqlServer"
+             applicationName="/"
+             type="System.Web.Security.SqlRoleProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a"/>
+      </providers>
+    </roleManager>
+  </system.web>
+
 </configuration>
