Ordelijk maken + kleine aanpassing login

--- a/desktopapp/desktopapp/desktopapp.csproj
+++ b/desktopapp/desktopapp/desktopapp.csproj
@@ -83,6 +83,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="classes\Connectie.cs" />
+    <Compile Include="classes\UserDB.cs" />
+    <Compile Include="classes\Users.cs" />
     <Compile Include="hulpverlener.xaml.cs">
       <DependentUpon>hulpverlener.xaml</DependentUpon>
     </Compile>
@@ -126,12 +129,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Finah\Finah.csproj">
-      <Project>{99ff67c8-88bf-4ca7-934b-d9bfefcea3c4}</Project>
-      <Name>Finah</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5 %28x86 and x64%29</ProductName>
@@ -147,6 +144,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
