--- a/Finah-desktop/desktopapp/App.config
+++ b/Finah-desktop/desktopapp/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <remove name="SqlServer"/>
+    <add name="SqlServer" connectionString="Data Source=of4tna6c1a.database.windows.net;Initial Catalog=Main;Persist Security Info=True;User ID=finah;Password=Potlood123"/>
+  </connectionStrings>
 </configuration>
