--- a/Finah-desktop/desktopapp/desktopapp.csproj
+++ b/Finah-desktop/desktopapp/desktopapp.csproj
@@ -103,7 +103,7 @@
     <Compile Include="classes\Gemeente.cs" />
     <Compile Include="classes\Patient.cs" />
     <Compile Include="classes\Persoon.cs" />
-    <Compile Include="DAL.cs" />
+    <Compile Include="classes\DAL.cs" />
     <Compile Include="Hulpverlener.xaml.cs">
       <DependentUpon>Hulpverlener.xaml</DependentUpon>
     </Compile>
