--- a/Finah-backend/finahback/finahback.csproj
+++ b/Finah-backend/finahback/finahback.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Controllers\PatientsController.cs" />
     <Compile Include="Controllers\PersoonsController.cs" />
     <Compile Include="Controllers\VraagsController.cs" />
+    <Compile Include="Controllers\vragensController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -202,6 +203,26 @@
     <Compile Include="Migrations\201505130818006_update24.Designer.cs">
       <DependentUpon>201505130818006_update24.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505221514386_update25.cs" />
+    <Compile Include="Migrations\201505221514386_update25.Designer.cs">
+      <DependentUpon>201505221514386_update25.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505221621461_update26.cs" />
+    <Compile Include="Migrations\201505221621461_update26.Designer.cs">
+      <DependentUpon>201505221621461_update26.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505221622387_update27.cs" />
+    <Compile Include="Migrations\201505221622387_update27.Designer.cs">
+      <DependentUpon>201505221622387_update27.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505221756522_update28.cs" />
+    <Compile Include="Migrations\201505221756522_update28.Designer.cs">
+      <DependentUpon>201505221756522_update28.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505221845403_update29.cs" />
+    <Compile Include="Migrations\201505221845403_update29.Designer.cs">
+      <DependentUpon>201505221845403_update29.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Categorie.cs" />
     <Compile Include="Models\Vraag.cs" />
@@ -211,6 +232,7 @@
     <Compile Include="Models\Overzicht.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Persoon.cs" />
+    <Compile Include="Models\vragen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -292,6 +314,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505130818006_update24.resx">
       <DependentUpon>201505130818006_update24.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505221514386_update25.resx">
+      <DependentUpon>201505221514386_update25.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505221621461_update26.resx">
+      <DependentUpon>201505221621461_update26.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505221622387_update27.resx">
+      <DependentUpon>201505221622387_update27.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505221756522_update28.resx">
+      <DependentUpon>201505221756522_update28.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505221845403_update29.resx">
+      <DependentUpon>201505221845403_update29.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
