--- a/Finah-desktop/desktopapp/desktopapp.csproj
+++ b/Finah-desktop/desktopapp/desktopapp.csproj
@@ -81,10 +81,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AanvraagResult.xaml.cs">
+      <DependentUpon>AanvraagResult.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Registreer.xaml.cs">
       <DependentUpon>Registreer.xaml</DependentUpon>
     </Compile>
     <Page Include="Aanvraag.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="AanvraagResult.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
